# interop

./: .gitignore  .gitreview  .zuul.yaml  2015.03.json  2015.03.rst  2015.04.json  2015.04.rst  2015.05.json  2015.05.rst  2015.07.json  2015.next.json  2015.next.rst  2016.01.json  2016.08.json  2016.next.json  2017.01.json  2017.08.json  2017.09.json  2018.02.json  2018.11.json  2019.06.json  2019.11.json  2020.06.json  CoreCriteria.rst  CoreDefinition.rst  DesignatedSections.rst  GovernanceProcess.rst  HACKING.rst  PlatformCap.rst  ProcessCycles.rst  README.rst  flagged_list  lexicon.rst  newcaps.json  next.json  organize.py  setup.cfg  test-requirements.txt  tox.ini
2015.04/: 2015.04.flagged.txt  2015.04.required.txt  7c8fcc67-api-test-list.txt  procedure.rst  required.py
2015.05/: 2015.05.flagged.txt  2015.05.required.txt  procedure.rst  required.py
2015.07/: 2015.07.flagged.txt  2015.07.required.txt  procedure.rst  required.py
2016.01/: 2016.01.flagged.txt  2016.01.required.txt  procedure.rst  required.py
2016.08/: procedure.rst
add-ons/: criteria.txt  dns.2018.02.json  dns.2018.11.json  dns.2019.06.json  dns.2019.11.json  dns.2020.06.json  dns.next.json  orchestration.2018.02.json  orchestration.2018.11.json  orchestration.2019.06.json  orchestration.2019.11.json  orchestration.2020.06.json  orchestration.next.json
process/: 2015A.rst  CoreCriteria.rst  CoreDefinition.rst  DesignatedSections.rst  GovernanceProcess.rst  Lexicon.rst  ProcessCycles.rst
schema/: 1.3.rst
tools/: checktests.py  consistency.sh  flake8wrap.sh  jsonToRst.py  push-csv.py
(+51 files in other folders)
