[metadata]
name = defcore
summary = OpenStack DefCore Process
description-file =
    README.rst
author = OpenStack
author-email = defcore-committee@lists.openstack.org
home-page = https://wiki.openstack.org/wiki/Governance/DefCoreCommitee
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

#[pbr]
#warnerrors = True

[wheel]
universal = 1
